@@ -1,3 +1,9 @@
+2004-08-26  Juergen Reuter   <reuter@ipd.uka.de>
+
+	* lily/stem.cc: bugfix: adjust-if-on-staffline: use
+	Stem::stem_end_position instead of broken
+	Staff_symbol_referencer::get_position
+
 2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/slur-engraver.cc (try_music): ignore slurs_. Otherwise we
